--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Mindful Path Counseling. All rights reserved.</p>
+            <p>&copy; 2024 Mebde Psikoloji. All rights reserved.</p>
         </div>
     </footer>
 
